--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <span class="text-adjust position-relative d-inline-flex align-items-center">
                             <img src="assets/img/banner/black-arrow.png" alt="img">
                             <span class="black-clr">
-                                Agency
+                                Media
                             </span>
                         <img src="assets/img/banner/soft-star.png" alt="img" class="soft-star1">
                         </span>
