--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Keywords -->
-    <meta name="keywords" content="boot, Bootstrap, Webgen - HTML Template">
+  
     <!--  Description -->
-    <meta name="description" content="Webgen - Landing HTML Template">
+    <meta name="description" content="Blue Melon Media">
     <!-- == Page title == -->
     <title>Blue Melon Agency</title>
     <!-- Favicon/x-icon -->
