--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <img src="assets/img/banner/soft-star.png" alt="img" class="soft-star1">
                         </span>
                     </h1>
-                    <a href="https://www.youtube.com/watch?v=lMJImKo-eZU" class="video-popup step-textcircle">
+                    <a href="" class="video-popup step-textcircle">
                         <span class="icon d-center radius100">
                             <i class="fas fa-play"></i>
                         </span>
